--- a/trabalho-1.ipynb
+++ b/trabalho-1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "958ac350",
    "metadata": {},
    "outputs": [],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "a1386816",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "413aa4ea",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "313b05af",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "ae6ab1d2",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "c3e27d92",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "6597536d",
    "metadata": {},
    "outputs": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "4128bc73",
    "metadata": {},
    "outputs": [
@@ -715,18 +715,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "97af88fb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 2, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class LinkedStack:\n",
     "    class _Node:\n",
@@ -777,17 +769,318 @@
     "\n",
     "class LinkedQueue:\n",
     "    class _Node:\n",
-    "        __slots__= \"__element\", \"__next\" \n",
-    "        def __init__(self, element, next):\n",
-    "            self.__element = element\n",
-    "            self.__next = next\n",
-    "        "
+    "        __slots__ = '_element', '_next'\n",
+    "        def __init__(self, element, next_node):\n",
+    "            self._element = element\n",
+    "            self._next = next_node\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self._head = None\n",
+    "        self._tail = None\n",
+    "        self._size = 0\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return self._size\n",
+    "\n",
+    "    def is_empty(self):\n",
+    "        return self._size == 0\n",
+    "\n",
+    "    def first(self):\n",
+    "        if self.is_empty():\n",
+    "            raise IndexError('Queue is empty')\n",
+    "        return self._head._element\n",
+    "\n",
+    "    def enqueue(self, e):\n",
+    "        new_node = self._Node(e, None)\n",
+    "        if self.is_empty():\n",
+    "            self._head = new_node\n",
+    "        else:\n",
+    "            self._tail._next = new_node\n",
+    "        self._tail = new_node\n",
+    "        self._size += 1\n",
+    "\n",
+    "    def dequeue(self):\n",
+    "        if self.is_empty():\n",
+    "            raise IndexError('Queue is empty')\n",
+    "        \n",
+    "        answer = self._head._element\n",
+    "        self._head = self._head._next\n",
+    "        self._size -= 1\n",
+    "        \n",
+    "        if self.is_empty():\n",
+    "            self._tail = None\n",
+    "            \n",
+    "        return answer\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        elements = []\n",
+    "        curr = self._head\n",
+    "        while curr:\n",
+    "            elements.append(curr._element)\n",
+    "            curr = curr._next\n",
+    "        return f\"Queue: {elements}\"\n",
+    "    \n",
+    "\n",
+    "class CircularQueue:\n",
+    "    class _Node:\n",
+    "        __slots__ = '_element', '_next'\n",
+    "        def __init__(self, element, next_node):\n",
+    "            self._element = element\n",
+    "            self._next = next_node\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self._tail = None\n",
+    "        self._size = 0\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return self._size\n",
+    "\n",
+    "    def is_empty(self):\n",
+    "        return self._size == 0\n",
+    "\n",
+    "    def first(self):\n",
+    "        if self.is_empty():\n",
+    "            raise IndexError('Queue is empty')\n",
+    "        head = self._tail._next\n",
+    "        return head._element\n",
+    "\n",
+    "    def enqueue(self, e):\n",
+    "        new_node = self._Node(e, None)\n",
+    "        if self.is_empty():\n",
+    "            new_node._next = new_node\n",
+    "            self._tail = new_node\n",
+    "        else:\n",
+    "            new_node._next = self._tail._next \n",
+    "            self._tail._next = new_node       \n",
+    "            self._tail = new_node             \n",
+    "        self._size += 1\n",
+    "\n",
+    "    def dequeue(self):\n",
+    "        if self.is_empty():\n",
+    "            raise IndexError('Queue is empty')\n",
+    "        \n",
+    "        old_head = self._tail._next\n",
+    "        if self._size == 1:\n",
+    "            self._tail = None\n",
+    "        else:\n",
+    "            self._tail._next = old_head._next\n",
+    "            \n",
+    "        self._size -= 1\n",
+    "        return old_head._element\n",
+    "\n",
+    "    def rotate(self):\n",
+    "        if self._size > 0:\n",
+    "            self._tail = self._tail._next\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        if self.is_empty():\n",
+    "            return \"CircularQueue: []\"\n",
+    "        elements = []\n",
+    "        head = self._tail._next\n",
+    "        curr = head\n",
+    "        while True:\n",
+    "            elements.append(curr._element)\n",
+    "            curr = curr._next\n",
+    "            if curr is head:\n",
+    "                break\n",
+    "        return f\"CircularQueue: {elements}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08cb7d76",
+   "metadata": {},
+   "source": [
+    "**Exercicio 13:**<br>\n",
+    "Forneca um algoritmo para encontrar o penultimo no em uma lista encadeada simples na qual o ultimo no e indicado por uma proxima referencia de None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e6bd9164",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class LinkedList:\n",
+    "    class _Node:\n",
+    "        __slots__ = '_element', '_next'\n",
+    "        def __init__(self, element, next_node):\n",
+    "            self._element = element\n",
+    "            self._next = next_node\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self._head = None\n",
+    "        self._size = 0\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return self._size\n",
+    "    \n",
+    "    def is_empty(self):\n",
+    "        return self._size == 0\n",
+    "    \n",
+    "    def append(self, e):\n",
+    "        new_node = self._Node(e, None)\n",
+    "        \n",
+    "        if self.is_empty():\n",
+    "            self._head = new_node\n",
+    "            self._size += 1\n",
+    "        else:\n",
+    "            current_node = self._head\n",
+    "            while not current_node._next == None:\n",
+    "                current_node = current_node._next\n",
+    "            \n",
+    "            current_node._next = new_node\n",
+    "            self._size += 1\n",
+    "\n",
+    "    def remove(self, target):\n",
+    "        if self.is_empty():\n",
+    "            raise IndexError('Remove from an empty list.')\n",
+    "        \n",
+    "        current_node = self._head\n",
+    "        if current_node._element == target:\n",
+    "            self._head = current_node._next\n",
+    "            return\n",
+    "        \n",
+    "        while not current_node._next == None:\n",
+    "            if current_node._next._element == target:\n",
+    "                current_node._next = current_node._next._next\n",
+    "                return\n",
+    "            current_node = current_node._next\n",
+    "        \n",
+    "        if current_node._element == target:\n",
+    "            current_node._next = current_node._next._next\n",
+    "            return\n",
+    "\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        elements = []\n",
+    "        current_node = self._head\n",
+    "        while current_node:\n",
+    "            elements.append(current_node._element)\n",
+    "            current_node = current_node._next\n",
+    "        \n",
+    "        return str(elements)\n",
+    "    \n",
+    "\n",
+    "def find_pendultimate(linked_list: LinkedList):\n",
+    "    current_node = linked_list._head\n",
+    "    while not current_node._next._next == None:\n",
+    "        \n",
+    "        current_node = current_node._next\n",
+    "    return current_node\n",
+    "\n",
+    "linked_list = LinkedList()\n",
+    "linked_list.append(1)\n",
+    "linked_list.append(2)\n",
+    "linked_list.append(3)\n",
+    "\n",
+    "# Expected output: 2\n",
+    "print(find_pendultimate(linked_list)._element)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "059f5989",
+   "metadata": {},
+   "source": [
+    "**Exercicio 14:**<br>\n",
+    "Descreva um bom algoritmo para concatenar duas listas encadeadas simples L e M, dadas apenas referencias ao primeiro no de cada lista, em uma unica lista L que contem todos <br>\n",
+    "os nos de L seguidos por todos os nos de M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fe6a757b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def concatenate_ll(L: LinkedList, M: LinkedList):\n",
+    "    current_node = L._head\n",
+    "    while not current_node._next == None:\n",
+    "        current_node = current_node._next\n",
+    "    current_node._next = M._head\n",
+    "\n",
+    "\n",
+    "L = LinkedList()\n",
+    "M = LinkedList()\n",
+    "\n",
+    "L.append(1)\n",
+    "L.append(2)\n",
+    "L.append(3)\n",
+    "\n",
+    "M.append(4)\n",
+    "M.append(5)\n",
+    "M.append(6)\n",
+    "\n",
+    "concatenate_ll(L, M)\n",
+    "\n",
+    "# Expected output: [1, 2, 3, 4, 5, 6]\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6152065",
+   "metadata": {},
+   "source": [
+    "**Exercicio 15:**<br>\n",
+    "Descreva um algoritmo recursivo que conta o numero de nos em uma lista encadeada simples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "59cae80c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_ll_elements(node: LinkedList._Node):\n",
+    "    current_node = node\n",
+    "    if current_node._next != None:\n",
+    "        return 1 + count_ll_elements(current_node._next)\n",
+    "    else:\n",
+    "        return 1\n",
+    "\n",
+    "\n",
+    "linked_list_2 = LinkedList()\n",
+    "linked_list_2.append(1)\n",
+    "linked_list_2.append(2)\n",
+    "linked_list_2.append(3)\n",
+    "\n",
+    "# Expected output: 3\n",
+    "print(count_ll_elements(linked_list_2._head))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6bd9164",
+   "id": "881e1c34",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -795,7 +1088,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "ED-1",
    "language": "python",
    "name": "python3"
   },
@@ -809,7 +1102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
