--- a/trabalho-1.ipynb
+++ b/trabalho-1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "id": "958ac350",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "id": "f6b8041f",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "id": "5bcd1d88",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "id": "d64ccfb2",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "id": "a1386816",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "id": "413aa4ea",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 82,
    "id": "313b05af",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 83,
    "id": "ae6ab1d2",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 84,
    "id": "c3e27d92",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 96,
    "id": "6597536d",
    "metadata": {},
    "outputs": [
@@ -594,7 +594,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 2, '*', 3, '+']\n",
       "13\n"
      ]
     }
@@ -629,8 +628,6 @@
     "    \n",
     "    while not operators_stack.is_empty():\n",
     "        postfixed_expression.push(operators_stack.pop())\n",
-    "\n",
-    "    print(postfixed_expression)\n",
     "\n",
     "    prefixed_expression = ArrayStack()\n",
     "    while not postfixed_expression.is_empty():\n",
@@ -672,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "4128bc73",
    "metadata": {},
    "outputs": [
@@ -680,7 +677,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A palavra é um palindromo.\n"
+      "A palavra NÃO É um palindromo.\n"
      ]
     }
    ],
@@ -699,7 +696,7 @@
     "    return True\n",
     "\n",
     "if is_palindrome(\"natan\"):\n",
-    "    print(\"A palavra é um palindromo.\")\n",
+    "    print(f\"A palavra é um palindromo.\")\n",
     "else:\n",
     "    print(\"A palavra NÃO É um palindromo.\")"
    ]
@@ -715,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 87,
    "id": "97af88fb",
    "metadata": {},
    "outputs": [],
@@ -897,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "id": "e6bd9164",
    "metadata": {},
    "outputs": [
@@ -999,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
    "id": "fe6a757b",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 101,
    "id": "59cae80c",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1052,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "4\n"
      ]
     }
    ],
@@ -1072,18 +1069,447 @@
     "linked_list_2.append(1)\n",
     "linked_list_2.append(2)\n",
     "linked_list_2.append(3)\n",
+    "linked_list_2.append(4)\n",
     "\n",
-    "# Expected output: 3\n",
+    "# Expected output: 4\n",
     "print(count_ll_elements(linked_list_2._head))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "881e1c34",
+   "cell_type": "markdown",
+   "id": "7b96453c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Exercicio 16:**<br>\n",
+    "Implemente uma funcao que conta o numero de nos em uma lista circularmente encadeada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "3414d070",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class CircularLinkedList:\n",
+    "    class _Node:\n",
+    "        __slots__ = '_element', '_next'\n",
+    "        def __init__(self, element, next_node=None):\n",
+    "            self._element = element\n",
+    "            self._next = next_node\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self._head = None\n",
+    "        self._size = 0\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return self._size\n",
+    "    \n",
+    "    def is_empty(self):\n",
+    "        return self._size == 0\n",
+    "    \n",
+    "    def append(self, e):\n",
+    "        new_node = self._Node(e, None)\n",
+    "        \n",
+    "        if self.is_empty():\n",
+    "            self._head = new_node\n",
+    "            new_node._next = self._head\n",
+    "        else:\n",
+    "            current_node = self._head\n",
+    "            while current_node._next != self._head:\n",
+    "                current_node = current_node._next\n",
+    "            \n",
+    "            current_node._next = new_node\n",
+    "            new_node._next = self._head \n",
+    "        \n",
+    "        self._size += 1\n",
+    "\n",
+    "    def remove(self, target):\n",
+    "        if self.is_empty():\n",
+    "            raise IndexError('Remove from an empty list.')\n",
+    "        \n",
+    "        current_node = self._head\n",
+    "        if current_node._element == target:\n",
+    "            if self._size == 1:\n",
+    "                self._head = None\n",
+    "                self._size -= 1\n",
+    "                return\n",
+    "            else:\n",
+    "                last_node = self._head\n",
+    "                while last_node._next != self._head:\n",
+    "                    last_node = last_node._next\n",
+    "                \n",
+    "                self._head = current_node._next\n",
+    "                last_node._next = self._head \n",
+    "                self._size -= 1\n",
+    "                return\n",
+    "        while current_node._next != self._head:\n",
+    "            if current_node._next._element == target:\n",
+    "                current_node._next = current_node._next._next\n",
+    "                self._size -= 1\n",
+    "                return\n",
+    "            current_node = current_node._next\n",
+    "        raise ValueError(f'Element {target} not found in list.')\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        if self.is_empty():\n",
+    "            return \"[]\"\n",
+    "        result = []\n",
+    "        current = self._head\n",
+    "        while True:\n",
+    "            result.append(str(current._element))\n",
+    "            current = current._next\n",
+    "            if current == self._head:\n",
+    "                break\n",
+    "        return \"[\" + \" -> \".join(result) + \" -> (return to start)]\"\n",
+    "\n",
+    "\n",
+    "def count_cll_elements(LL: CircularLinkedList):\n",
+    "    head = LL._head\n",
+    "    current_node = LL._head\n",
+    "    \n",
+    "    try:\n",
+    "        current_node = current_node._next\n",
+    "        count = 1\n",
+    "\n",
+    "        while not current_node == head:\n",
+    "            count += 1\n",
+    "            current_node = current_node._next\n",
+    "\n",
+    "        return count\n",
+    "    except AttributeError:\n",
+    "        return 0\n",
+    "\n",
+    "linked_list_3 = CircularLinkedList()\n",
+    "linked_list_3.append(1)\n",
+    "linked_list_3.append(1)\n",
+    "linked_list_3.append(1)\n",
+    "linked_list_3.append(1)\n",
+    "linked_list_3.append(1)\n",
+    "\n",
+    "# Expected output: 5\n",
+    "print(count_cll_elements(linked_list_3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "194d1f8f",
+   "metadata": {},
+   "source": [
+    "**Exercicio 17:**<br>\n",
+    "Descreva um algoritmo recurtsivo rapido para reverter uma lista encadeada simples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "cfe72d27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linked_list_4 BEFORE function: [1, 2, 3, 4]\n",
+      "linked_list_4 AFTER function: [4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_ll(LL: LinkedList):\n",
+    "    previous_node = None\n",
+    "    current_node = LL._head\n",
+    "\n",
+    "    while not current_node == None:\n",
+    "        next_node = current_node._next\n",
+    "        current_node._next = previous_node\n",
+    "        previous_node = current_node\n",
+    "        current_node = next_node\n",
+    "    \n",
+    "    LL._head = previous_node\n",
+    "\n",
+    "linked_list_4 = LinkedList()\n",
+    "linked_list_4.append(1)\n",
+    "linked_list_4.append(2)\n",
+    "linked_list_4.append(3)\n",
+    "linked_list_4.append(4)\n",
+    "\n",
+    "# Expected output:\n",
+    "# [1, 2, 3, 4]\n",
+    "# [4, 3, 2, 1]\n",
+    "print(f'linked_list_4 BEFORE function: {linked_list_4}')\n",
+    "reverse_ll(linked_list_4)\n",
+    "print(f'linked_list_4 AFTER function: {linked_list_4}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3c3015d",
+   "metadata": {},
+   "source": [
+    "**Exercicio 18:**<br>\n",
+    "Uma lista encadeada contem alguns numeros positivos e alguns numeros negativos. Usando essa lista encadeada, escreva um programa para criar duas novas listas encadeadas, uma contendo todos os numeros positivos e a outra contendo todos os numeros negativos.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "f5a79bb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linked list containing only positive numbers: [1, 3]\n",
+      "Linked list containing only negative numbers: [-2, -4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def separate(LL: LinkedList):\n",
+    "    positive_LL = LinkedList()\n",
+    "    negative_LL = LinkedList()\n",
+    "\n",
+    "    current_node = LL._head\n",
+    "    while not current_node == None:\n",
+    "        if current_node._element > 0:\n",
+    "            positive_LL.append(current_node._element)\n",
+    "        else:\n",
+    "            negative_LL.append(current_node._element)\n",
+    "        current_node = current_node._next\n",
+    "    \n",
+    "    return positive_LL, negative_LL\n",
+    "\n",
+    "linked_list_5 = LinkedList()\n",
+    "linked_list_5.append(1)\n",
+    "linked_list_5.append(-2)\n",
+    "linked_list_5.append(3)\n",
+    "linked_list_5.append(-4)\n",
+    "\n",
+    "only_positive, only_negative = separate(linked_list_5)\n",
+    "print(f'Linked list containing only positive numbers: {only_positive}')\n",
+    "print(f'Linked list containing only negative numbers: {only_negative}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4edfa5cf",
+   "metadata": {},
+   "source": [
+    "**Exercicio 19**<br>\n",
+    "Escreva um programa para excluir elementos duplicados em uma lista duplamente encadeada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "ac32fbcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doubly_linked_list BEFORE function: f[1 <-> 2 <-> 2 <-> 1 <-> 3]\n",
+      "doubly_linked_list AFTER function: f[1 <-> 2 <-> 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class DoublyLinkedList:\n",
+    "    class _Node:\n",
+    "        __slots__ = '_element', '_next', '_prev'\n",
+    "        \n",
+    "        def __init__(self, element, next_node=None, prev_node=None):\n",
+    "            self._element = element\n",
+    "            self._next = next_node\n",
+    "            self._prev = prev_node\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self._head = None\n",
+    "        self._tail = None \n",
+    "        self._size = 0\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return self._size\n",
+    "    \n",
+    "    def is_empty(self):\n",
+    "        return self._size == 0\n",
+    "    \n",
+    "    def append(self, e):\n",
+    "        new_node = self._Node(e, next_node=None, prev_node=self._tail)\n",
+    "        \n",
+    "        if self.is_empty():\n",
+    "            self._head = new_node\n",
+    "            self._tail = new_node\n",
+    "        else:\n",
+    "            self._tail._next = new_node\n",
+    "            self._tail = new_node\n",
+    "            \n",
+    "        self._size += 1\n",
+    "\n",
+    "    def remove(self, target):\n",
+    "        if self.is_empty():\n",
+    "            raise IndexError('Remove from an empty list.')\n",
+    "        \n",
+    "        if self._tail._element == target:\n",
+    "            self._remove_tail()\n",
+    "            return\n",
+    "\n",
+    "        current_node = self._head\n",
+    "        \n",
+    "        while current_node is not None:\n",
+    "            if current_node._element == target:\n",
+    "                if current_node == self._head:\n",
+    "                    self._remove_head()\n",
+    "                else:\n",
+    "                    current_node._prev._next = current_node._next\n",
+    "                    if current_node._next is not None:\n",
+    "                        current_node._next._prev = current_node._prev\n",
+    "                    self._size -= 1\n",
+    "                return\n",
+    "            \n",
+    "            current_node = current_node._next\n",
+    "            \n",
+    "        raise ValueError(f'Element {target} not found in list.')\n",
+    "\n",
+    "    def _remove_head(self):\n",
+    "        if self.is_empty():\n",
+    "            return\n",
+    "        \n",
+    "        if self._size == 1:\n",
+    "            self._head = None\n",
+    "            self._tail = None\n",
+    "        else:\n",
+    "            self._head = self._head._next\n",
+    "            self._head._prev = None\n",
+    "        \n",
+    "        self._size -= 1\n",
+    "\n",
+    "    def _remove_tail(self):\n",
+    "        if self.is_empty():\n",
+    "            return\n",
+    "            \n",
+    "        if self._size == 1:\n",
+    "            self._head = None\n",
+    "            self._tail = None\n",
+    "        else:\n",
+    "            self._tail = self._tail._prev\n",
+    "            self._tail._next = None # O novo tail não tem próximo\n",
+    "        \n",
+    "        self._size -= 1\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        if self.is_empty():\n",
+    "            return \"[]\"\n",
+    "        result = []\n",
+    "        current = self._head\n",
+    "        while current is not None:\n",
+    "            result.append(str(current._element))\n",
+    "            current = current._next\n",
+    "        return \"[\" + \" <-> \".join(result) + \"]\"\n",
+    "\n",
+    "\n",
+    "def delete_repeated(DLL: DoublyLinkedList):\n",
+    "    seen = set()\n",
+    "    current_node = DLL._head\n",
+    "    \n",
+    "    while current_node is not None:\n",
+    "        if current_node._element in seen:\n",
+    "            current_node._prev._next = current_node._next\n",
+    "            if current_node._next is not None:\n",
+    "                current_node._next._prev = current_node._prev\n",
+    "            else:\n",
+    "                DLL._tail = current_node._prev\n",
+    "            DLL._size -= 1\n",
+    "            current_node = current_node._next\n",
+    "            \n",
+    "        else:\n",
+    "            seen.add(current_node._element)\n",
+    "            current_node = current_node._next\n",
+    "\n",
+    "\n",
+    "doubly_linked_list = DoublyLinkedList()\n",
+    "doubly_linked_list.append(1)\n",
+    "doubly_linked_list.append(2)\n",
+    "doubly_linked_list.append(2)\n",
+    "doubly_linked_list.append(1)\n",
+    "doubly_linked_list.append(3)\n",
+    "\n",
+    "print(f'doubly_linked_list BEFORE function: f{doubly_linked_list}')\n",
+    "delete_repeated(doubly_linked_list)\n",
+    "print(f'doubly_linked_list AFTER function: f{doubly_linked_list}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f3a2e6c",
+   "metadata": {},
+   "source": [
+    "**Exercicio 20:**<br>\n",
+    "Modifique a classe DoublyLinkedBase (DoublyLinkedList, para o meu caso) para incluir um metodo reverse que inverte a ordem da lista, mas sem criar ou destruir nenhum no."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "ceb399f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doubly_linked_list_2 BEFORE reverse method: [1 <-> 2 <-> 3]\n",
+      "doubly_linked_list_2 AFTER reverse method: [3 <-> 2 <-> 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse(self):\n",
+    "    if self.is_empty():\n",
+    "        return\n",
+    "\n",
+    "    current_node = self._head\n",
+    "    \n",
+    "    # Percorre toda a lista trocando os ponteiros de cada nó\n",
+    "    while current_node is not None:\n",
+    "        # 1. Armazena temporariamente o próximo nó original\n",
+    "        # (Pois vamos sobrescrever o self._next logo abaixo)\n",
+    "        temp = current_node._next\n",
+    "        \n",
+    "        # 2. Realiza a troca dos ponteiros\n",
+    "        current_node._next = current_node._prev\n",
+    "        current_node._prev = temp\n",
+    "        \n",
+    "        # 3. Avança para o próximo nó da lista ORIGINAL\n",
+    "        # (que estava guardado em 'temp')\n",
+    "        current_node = temp\n",
+    "        \n",
+    "    # 4. Ao final do loop, trocamos o Head e o Tail de lugar\n",
+    "    # O antigo Head vira Tail, e o antigo Tail vira Head\n",
+    "    self._head, self._tail = self._tail, self._head\n",
+    "\n",
+    "\n",
+    "setattr(DoublyLinkedList, 'reverse', reverse)\n",
+    "\n",
+    "doubly_linked_list_2 = DoublyLinkedList()\n",
+    "doubly_linked_list_2.append(1)\n",
+    "doubly_linked_list_2.append(2)\n",
+    "doubly_linked_list_2.append(3)\n",
+    "print(f'doubly_linked_list_2 BEFORE reverse method: {doubly_linked_list_2}')\n",
+    "doubly_linked_list_2.reverse()\n",
+    "print(f'doubly_linked_list_2 AFTER reverse method: {doubly_linked_list_2}')\n"
+   ]
   }
  ],
  "metadata": {
