--- a/trabalho-1.ipynb
+++ b/trabalho-1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "id": "958ac350",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "id": "f6b8041f",
    "metadata": {},
    "outputs": [
@@ -1514,7 +1514,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ED-1",
+   "display_name": "ED-1 (3.13.7)",
    "language": "python",
    "name": "python3"
   },
@@ -1528,7 +1528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
