--- a/trabalho-1.ipynb
+++ b/trabalho-1.ipynb
@@ -1514,7 +1514,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ED-1 (3.13.7)",
+   "display_name": "ED-1",
    "language": "python",
    "name": "python3"
   },
