--- a/trabalho-2.ipynb
+++ b/trabalho-2.ipynb
@@ -61,6 +61,7 @@
     "        if self.right(p) is not None:\n",
     "            yield self.right(p)\n",
     "\n",
+    "\n",
     "class LinkedBinaryTree(BinaryTree):\n",
     "    class _Node:\n",
     "        __slots__ = '_element', '_parent', '_left', '_right'\n",
@@ -188,17 +189,257 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "4322e441",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Exercicio 2:**<br>\n",
+    "Implemente a classe de arvore binaria ArrayBinaryTree usando a representacao baseada em array descrita na Secao 8.3.2. Implemente as mesmas funcoes presentes na classe LinkedBinaryTree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8e9ea402",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tree size: 5\n",
+      "Root element: 10\n",
+      "Deleted element: 3\n",
+      "Tree size after delete: 4\n",
+      "Tree size after attach: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ArrayBinaryTree(BinaryTree):\n",
+    "    \n",
+    "    class _ArrayPosition(BinaryTree.Position):\n",
+    "        def __init__(self, container, index):\n",
+    "            self._container = container\n",
+    "            self._index = index\n",
+    "        \n",
+    "        def element(self):\n",
+    "            return self._container._data[self._index]\n",
+    "        \n",
+    "        def __eq__(self, other):\n",
+    "            return type(other) is type(self) and other._index == self._index\n",
+    "    \n",
+    "    def __init__(self, max_size=100):\n",
+    "        self._data = [None] * max_size\n",
+    "        self._size = 0\n",
+    "        self._max_size = max_size\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return self._size\n",
+    "    \n",
+    "    def _validate(self, p):\n",
+    "        if not isinstance(p, self._ArrayPosition):\n",
+    "            raise TypeError('p must be proper Position type')\n",
+    "        if p._container is not self:\n",
+    "            raise ValueError('p does not belong to this container')\n",
+    "        if p._index >= self._max_size or self._data[p._index] is None:\n",
+    "            raise ValueError('p is no longer valid')\n",
+    "        return p._index\n",
+    "    \n",
+    "    def _make_position(self, index):\n",
+    "        if 0 <= index < self._max_size and self._data[index] is not None:\n",
+    "            return self._ArrayPosition(self, index)\n",
+    "        return None\n",
+    "    \n",
+    "    def root(self):\n",
+    "        return self._make_position(0)\n",
+    "    \n",
+    "    def parent(self, p):\n",
+    "        index = self._validate(p)\n",
+    "        if index == 0:\n",
+    "            return None\n",
+    "        parent_index = (index - 1) // 2\n",
+    "        return self._make_position(parent_index)\n",
+    "    \n",
+    "    def left(self, p):\n",
+    "        index = self._validate(p)\n",
+    "        left_index = 2 * index + 1\n",
+    "        return self._make_position(left_index)\n",
+    "    \n",
+    "    def right(self, p):\n",
+    "        index = self._validate(p)\n",
+    "        right_index = 2 * index + 2\n",
+    "        return self._make_position(right_index)\n",
+    "    \n",
+    "    def num_children(self, p):\n",
+    "        count = 0\n",
+    "        if self.left(p) is not None:\n",
+    "            count += 1\n",
+    "        if self.right(p) is not None:\n",
+    "            count += 1\n",
+    "        return count\n",
+    "    \n",
+    "    def add_root(self, e):\n",
+    "        if not self.is_empty():\n",
+    "            raise ValueError('Root exists')\n",
+    "        self._data[0] = e\n",
+    "        self._size = 1\n",
+    "        return self._make_position(0)\n",
+    "    \n",
+    "    def add_left(self, p, e):\n",
+    "        index = self._validate(p)\n",
+    "        left_index = 2 * index + 1\n",
+    "        if left_index >= self._max_size:\n",
+    "            raise ValueError('Tree is full')\n",
+    "        if self._data[left_index] is not None:\n",
+    "            raise ValueError('Left child exists')\n",
+    "        self._data[left_index] = e\n",
+    "        self._size += 1\n",
+    "        return self._make_position(left_index)\n",
+    "    \n",
+    "    def add_right(self, p, e):\n",
+    "        index = self._validate(p)\n",
+    "        right_index = 2 * index + 2\n",
+    "        if right_index >= self._max_size:\n",
+    "            raise ValueError('Tree is full')\n",
+    "        if self._data[right_index] is not None:\n",
+    "            raise ValueError('Right child exists')\n",
+    "        self._data[right_index] = e\n",
+    "        self._size += 1\n",
+    "        return self._make_position(right_index)\n",
+    "    \n",
+    "    def replace(self, p, e):\n",
+    "        index = self._validate(p)\n",
+    "        old = self._data[index]\n",
+    "        self._data[index] = e\n",
+    "        return old\n",
+    "    \n",
+    "    def _delete(self, p):\n",
+    "        index = self._validate(p)\n",
+    "        \n",
+    "        if self.num_children(p) == 2:\n",
+    "            raise ValueError('p has two children')\n",
+    "        \n",
+    "        child_pos = self.left(p) if self.left(p) else self.right(p)\n",
+    "        element_to_return = self._data[index]\n",
+    "        \n",
+    "        if child_pos is not None:\n",
+    "            child_index = child_pos._index\n",
+    "            self._shift_subtree_up(child_index, index)\n",
+    "        \n",
+    "        self._data[index] = None\n",
+    "        self._size -= 1\n",
+    "        return element_to_return\n",
+    "\n",
+    "    def _shift_subtree_up(self, from_index, to_index):\n",
+    "        if from_index >= self._max_size or self._data[from_index] is None:\n",
+    "            return\n",
+    "            \n",
+    "        index_diff = to_index - from_index\n",
+    "        queue = [from_index]\n",
+    "        nodes_to_move = []\n",
+    "\n",
+    "        while queue:\n",
+    "            current_from = queue.pop(0)\n",
+    "            if current_from < self._max_size and self._data[current_from] is not None:\n",
+    "                nodes_to_move.append(current_from)\n",
+    "                \n",
+    "                left_from = 2 * current_from + 1\n",
+    "                right_from = 2 * current_from + 2\n",
+    "\n",
+    "                if left_from < self._max_size:\n",
+    "                    queue.append(left_from)\n",
+    "                if right_from < self._max_size:\n",
+    "                    queue.append(right_from)\n",
+    "\n",
+    "        for current_from in nodes_to_move:\n",
+    "            current_to = current_from + index_diff\n",
+    "            if current_to < self._max_size:\n",
+    "                self._data[current_to] = self._data[current_from]\n",
+    "                self._data[current_from] = None\n",
+    "\n",
+    "    def _attach(self, p, t1, t2):\n",
+    "        index = self._validate(p)\n",
+    "        if not self.is_leaf(p):\n",
+    "            raise ValueError('Position must be leaf')\n",
+    "        if not type(self) is type(t1) is type(t2):\n",
+    "            raise TypeError('Tree types must match')\n",
+    "        \n",
+    "        if not t1.is_empty():\n",
+    "            self._attach_subtree(t1, 0, index, True)\n",
+    "            t1._data = [None] * t1._max_size\n",
+    "            t1._size = 0\n",
+    "            \n",
+    "        if not t2.is_empty():\n",
+    "            self._attach_subtree(t2, 0, index, False)\n",
+    "            t2._data = [None] * t2._max_size\n",
+    "            t2._size = 0\n",
+    "    \n",
+    "    def _attach_subtree(self, source_tree, source_index, target_parent_index, is_left):\n",
+    "        if source_index >= source_tree._max_size or source_tree._data[source_index] is None:\n",
+    "            return\n",
+    "        \n",
+    "        target_index = 2 * target_parent_index + (1 if is_left else 2)\n",
+    "        \n",
+    "        if target_index >= self._max_size:\n",
+    "            raise ValueError('Not enough space to attach subtree')\n",
+    "        \n",
+    "        if self._data[target_index] is not None:\n",
+    "             raise ValueError('Target position already occupied')\n",
+    "\n",
+    "        self._data[target_index] = source_tree._data[source_index]\n",
+    "        self._size += 1\n",
+    "        \n",
+    "        source_left = 2 * source_index + 1\n",
+    "        if source_left < source_tree._max_size:\n",
+    "            self._attach_subtree(source_tree, source_left, target_index, True)\n",
+    "            \n",
+    "        source_right = 2 * source_index + 2\n",
+    "        if source_right < source_tree._max_size:\n",
+    "            self._attach_subtree(source_tree, source_right, target_index, False)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    tree = ArrayBinaryTree(20)\n",
+    "    \n",
+    "    root = tree.add_root(10)\n",
+    "    left_child = tree.add_left(root, 5)\n",
+    "    right_child = tree.add_right(root, 15)\n",
+    "    \n",
+    "    leaf1 = tree.add_left(left_child, 3)\n",
+    "    leaf2 = tree.add_right(right_child, 18)\n",
+    "    \n",
+    "    print(f\"Tree size: {len(tree)}\")\n",
+    "    print(f\"Root element: {root.element()}\")\n",
+    "    \n",
+    "    deleted = tree._delete(leaf1)\n",
+    "    print(f\"Deleted element: {deleted}\")\n",
+    "    print(f\"Tree size after delete: {len(tree)}\")\n",
+    "    \n",
+    "    t1 = ArrayBinaryTree(20)\n",
+    "    t1_root = t1.add_root(20)\n",
+    "    t1.add_left(t1_root, 18)\n",
+    "    t1.add_right(t1_root, 22)\n",
+    "    \n",
+    "    t2 = ArrayBinaryTree(20)\n",
+    "    t2_root = t2.add_root(30)\n",
+    "    \n",
+    "    tree._attach(left_child, t1, t2)\n",
+    "    print(f\"Tree size after attach: {len(tree)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ef32206",
+   "metadata": {},
+   "source": [
+    "**Exercicio 3:**<br>\n",
+    "Implemente as funcoes Postorder, Inorder e Preorder Traversal (secao 8.4.4) para a classe LinkedBinaryTree"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e9ea402",
+   "id": "9fb99c90",
    "metadata": {},
    "outputs": [],
    "source": []
