--- a/trabalho-1.ipynb
+++ b/trabalho-1.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "id": "5bcd1d88",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "id": "d64ccfb2",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "id": "a1386816",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "id": "413aa4ea",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "id": "313b05af",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "id": "ae6ab1d2",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "id": "c3e27d92",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "id": "6597536d",
    "metadata": {},
    "outputs": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4128bc73",
    "metadata": {},
    "outputs": [
@@ -677,7 +677,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A palavra NÃO É um palindromo.\n"
+      "A palavra é um palindromo.\n"
      ]
     }
    ],
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "id": "97af88fb",
    "metadata": {},
    "outputs": [],
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "id": "e6bd9164",
    "metadata": {},
    "outputs": [
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "id": "fe6a757b",
    "metadata": {},
    "outputs": [
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 15,
    "id": "59cae80c",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "id": "3414d070",
    "metadata": {},
    "outputs": [
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "id": "cfe72d27",
    "metadata": {},
    "outputs": [
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 18,
    "id": "f5a79bb5",
    "metadata": {},
    "outputs": [
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "ac32fbcc",
    "metadata": {},
    "outputs": [
@@ -1404,7 +1404,7 @@
     "            self._tail = None\n",
     "        else:\n",
     "            self._tail = self._tail._prev\n",
-    "            self._tail._next = None # O novo tail não tem próximo\n",
+    "            self._tail._next = None \n",
     "        \n",
     "        self._size -= 1\n",
     "\n",
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 20,
    "id": "ceb399f0",
    "metadata": {},
    "outputs": [
@@ -1481,22 +1481,14 @@
     "\n",
     "    current_node = self._head\n",
     "    \n",
-    "    # Percorre toda a lista trocando os ponteiros de cada nó\n",
     "    while current_node is not None:\n",
-    "        # 1. Armazena temporariamente o próximo nó original\n",
-    "        # (Pois vamos sobrescrever o self._next logo abaixo)\n",
     "        temp = current_node._next\n",
-    "        \n",
-    "        # 2. Realiza a troca dos ponteiros\n",
+    "\n",
     "        current_node._next = current_node._prev\n",
     "        current_node._prev = temp\n",
-    "        \n",
-    "        # 3. Avança para o próximo nó da lista ORIGINAL\n",
-    "        # (que estava guardado em 'temp')\n",
+    "       \n",
     "        current_node = temp\n",
-    "        \n",
-    "    # 4. Ao final do loop, trocamos o Head e o Tail de lugar\n",
-    "    # O antigo Head vira Tail, e o antigo Tail vira Head\n",
+    " \n",
     "    self._head, self._tail = self._tail, self._head\n",
     "\n",
     "\n",
