--- a/trabalho-2.ipynb
+++ b/trabalho-2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "01878605",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "8e9ea402",
    "metadata": {},
    "outputs": [
@@ -438,8 +438,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9fb99c90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--PREORDER TRAVERSAL--\n",
+      "1\n",
+      "2\n",
+      "4\n",
+      "5\n",
+      "3\n",
+      "6\n",
+      "7\n",
+      "\n",
+      "\n",
+      "--POSTORDER TRAVERSAL--\n",
+      "4\n",
+      "5\n",
+      "2\n",
+      "6\n",
+      "7\n",
+      "3\n",
+      "1\n",
+      "\n",
+      "\n",
+      "--INORDER TRAVERSAL--\n",
+      "4\n",
+      "2\n",
+      "5\n",
+      "1\n",
+      "6\n",
+      "3\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Estrutura:\n",
+    "#       1\n",
+    "#     /   \\\n",
+    "#    2     3\n",
+    "#   / \\   / \\\n",
+    "#  4   5 6   7\n",
+    "\n",
+    "tree = LinkedBinaryTree()\n",
+    "root = tree._add_root('1')      \n",
+    "n2 = tree._add_left(root, '2')      \n",
+    "n3 = tree._add_right(root, '3')  \n",
+    "n4 = tree._add_left(n2, '4')   \n",
+    "n5 = tree._add_right(n2, '5')  \n",
+    "n6 = tree._add_left(n3, '6')        \n",
+    "n7 = tree._add_right(n3, '7')        \n",
+    "\n",
+    "# Implementing PREORDER TRAVERSAL method\n",
+    "def preorder(self):\n",
+    "    if not self.is_empty():\n",
+    "        for p in self._subtree_preoder(self.root()):\n",
+    "            yield p\n",
+    "\n",
+    "def _subtree_preorder(self, p):\n",
+    "    yield p\n",
+    "    for c in self.children(p):\n",
+    "        for other in self._subtree_preoder(c):\n",
+    "            yield other\n",
+    "\n",
+    "LinkedBinaryTree._subtree_preoder = _subtree_preorder\n",
+    "LinkedBinaryTree.preorder = preorder\n",
+    "\n",
+    "# Expected output: 1, 2, 4, 5, 3, 6, 7\n",
+    "print('--PREORDER TRAVERSAL--')\n",
+    "for p in tree.preorder():\n",
+    "    print(p.element())\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Implementing POSTORDER TRAVERSAL method\n",
+    "def postorder(self):\n",
+    "    if not self.is_empty():\n",
+    "        for p in self._subtree_postorder(self.root()):\n",
+    "            yield p\n",
+    "\n",
+    "def _subtree_postorder(self, p):\n",
+    "    for c in self.children(p):\n",
+    "        for other in self._subtree_postorder(c):\n",
+    "            yield other\n",
+    "    yield p\n",
+    "\n",
+    "LinkedBinaryTree._subtree_postorder = _subtree_postorder\n",
+    "LinkedBinaryTree.postorder = postorder\n",
+    "\n",
+    "# Expected output: 4, 5, 2, 6, 7, 3, 1\n",
+    "print('--POSTORDER TRAVERSAL--')\n",
+    "for p in tree.postorder():\n",
+    "    print(p.element())\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "\n",
+    "# Implementing INORDER TRAVERSAL method\n",
+    "def inorder(self):\n",
+    "    if not self.is_empty():\n",
+    "        for p in self._subtree_inorder(self.root()):\n",
+    "            yield p\n",
+    "\n",
+    "def _subtree_inorder(self, p):\n",
+    "    if self.left(p) is not None:\n",
+    "        for other in self._subtree_inorder(self.left(p)):\n",
+    "            yield other\n",
+    "    yield p \n",
+    "    if self.right(p) is not None:\n",
+    "        for other in self._subtree_inorder(self.right(p)):\n",
+    "            yield other\n",
+    "\n",
+    "LinkedBinaryTree._subtree_inorder = _subtree_inorder\n",
+    "LinkedBinaryTree.inorder = inorder\n",
+    "\n",
+    "# Expected output: 4, 2, 5, 6, 3, 7\n",
+    "print('--INORDER TRAVERSAL--')\n",
+    "for p in tree.inorder():\n",
+    "    print(p.element())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45578c23",
    "metadata": {},
    "outputs": [],
    "source": []
