--- a/trabalho-2.ipynb
+++ b/trabalho-2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "01878605",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "8e9ea402",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "9fb99c90",
    "metadata": {},
    "outputs": [
@@ -562,9 +562,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7921f016",
+   "metadata": {},
+   "source": [
+    "**Exercicio 4:**<br>\n",
+    "Escreva um algoritmo eficiente para verificar se duas arvores binarias sao identicas ou nao. Duas arvores binarias sao identicas se tiverem a mesma estrutura e o mesmo conteudo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "45578c23",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Position' object has no attribute 'left'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 31\u001b[39m\n\u001b[32m     29\u001b[39m t2 = LinkedBinaryTree()\n\u001b[32m     30\u001b[39m t2._add_root(\u001b[32m1\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m \u001b[43mare_lbt_equal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt2\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 12\u001b[39m, in \u001b[36mare_lbt_equal\u001b[39m\u001b[34m(t1, t2)\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mare_lbt_equal\u001b[39m(t1: LinkedBinaryTree, t2: LinkedBinaryTree):\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mare_identical_subtrees\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt1\u001b[49m\u001b[43m.\u001b[49m\u001b[43mroot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt2\u001b[49m\u001b[43m.\u001b[49m\u001b[43mroot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 22\u001b[39m, in \u001b[36mare_identical_subtrees\u001b[39m\u001b[34m(p1, p2)\u001b[39m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m p1.element() \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m p2.element():\n\u001b[32m     20\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m left_identical = are_identical_subtrees(\u001b[43mp1\u001b[49m\u001b[43m.\u001b[49m\u001b[43mleft\u001b[49m(), p2.right())\n\u001b[32m     23\u001b[39m right_identical = are_identical_subtrees(p1.right(), p2.right())\n\u001b[32m     25\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m left_identical \u001b[38;5;129;01mand\u001b[39;00m right_identical\n",
+      "\u001b[31mAttributeError\u001b[39m: 'Position' object has no attribute 'left'"
+     ]
+    }
+   ],
+   "source": [
+    "# Algorithm to check if two ArrayBinaryTrees are equal.\n",
+    "def are_abt_equal(t1: ArrayBinaryTree, t2:ArrayBinaryTree):\n",
+    "    if len(t1) is not len(t2):\n",
+    "        return False\n",
+    "    for i in range(0, len(t2)):\n",
+    "        if t1[i] is not t2[i]:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "# Algorithm to check if two LinkedBinaryTrees are equal\n",
+    "def are_lbt_equal(t1: LinkedBinaryTree, t2: LinkedBinaryTree):\n",
+    "    return are_identical_subtrees(t1.root(), t2.root())\n",
+    "\n",
+    "def are_identical_subtrees(p1, p2):\n",
+    "    if p1 is None and p2 is None:\n",
+    "        return True\n",
+    "    if p1 is None or p2 is None:\n",
+    "        return False\n",
+    "    if p1.element() != p2.element():\n",
+    "        return False\n",
+    "    \n",
+    "    left_identical = are_identical_subtrees(p1.left(), p2.left())\n",
+    "    right_identical = are_identical_subtrees(p1.right(), p2.right())\n",
+    "\n",
+    "    return left_identical and right_identical\n",
+    "\n",
+    "t1 = LinkedBinaryTree()\n",
+    "t1._add_root(1)\n",
+    "t2 = LinkedBinaryTree()\n",
+    "t2._add_root(1)\n",
+    "are_lbt_equal(t1, t2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "980c0d04",
    "metadata": {},
    "outputs": [],
    "source": []
