--- a/trabalho-2.ipynb
+++ b/trabalho-2.ipynb
@@ -572,22 +572,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "45578c23",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Position' object has no attribute 'left'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 31\u001b[39m\n\u001b[32m     29\u001b[39m t2 = LinkedBinaryTree()\n\u001b[32m     30\u001b[39m t2._add_root(\u001b[32m1\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m \u001b[43mare_lbt_equal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt2\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 12\u001b[39m, in \u001b[36mare_lbt_equal\u001b[39m\u001b[34m(t1, t2)\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mare_lbt_equal\u001b[39m(t1: LinkedBinaryTree, t2: LinkedBinaryTree):\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mare_identical_subtrees\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt1\u001b[49m\u001b[43m.\u001b[49m\u001b[43mroot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt2\u001b[49m\u001b[43m.\u001b[49m\u001b[43mroot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 22\u001b[39m, in \u001b[36mare_identical_subtrees\u001b[39m\u001b[34m(p1, p2)\u001b[39m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m p1.element() \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m p2.element():\n\u001b[32m     20\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m left_identical = are_identical_subtrees(\u001b[43mp1\u001b[49m\u001b[43m.\u001b[49m\u001b[43mleft\u001b[49m(), p2.right())\n\u001b[32m     23\u001b[39m right_identical = are_identical_subtrees(p1.right(), p2.right())\n\u001b[32m     25\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m left_identical \u001b[38;5;129;01mand\u001b[39;00m right_identical\n",
-      "\u001b[31mAttributeError\u001b[39m: 'Position' object has no attribute 'left'"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -602,18 +599,26 @@
     "\n",
     "# Algorithm to check if two LinkedBinaryTrees are equal\n",
     "def are_lbt_equal(t1: LinkedBinaryTree, t2: LinkedBinaryTree):\n",
-    "    return are_identical_subtrees(t1.root(), t2.root())\n",
+    "    if len(t1) != len(t2):\n",
+    "        return False\n",
     "\n",
-    "def are_identical_subtrees(p1, p2):\n",
+    "    return are_identical_subtrees(t1, t1.root(), t2, t2.root())\n",
+    "\n",
+    "def are_identical_subtrees(t1: LinkedBinaryTree, p1: LinkedBinaryTree.Position, t2: LinkedBinaryTree, p2: LinkedBinaryTree.Position):\n",
     "    if p1 is None and p2 is None:\n",
     "        return True\n",
+    "    \n",
     "    if p1 is None or p2 is None:\n",
     "        return False\n",
+    "    \n",
     "    if p1.element() != p2.element():\n",
     "        return False\n",
+    "    left_identical = are_identical_subtrees(t1, t1.left(p1), t2, t2.left(p2))\n",
     "    \n",
-    "    left_identical = are_identical_subtrees(p1.left(), p2.left())\n",
-    "    right_identical = are_identical_subtrees(p1.right(), p2.right())\n",
+    "    if not left_identical:\n",
+    "        return False\n",
+    "\n",
+    "    right_identical = are_identical_subtrees(t1, t1.right(p1), t2, t2.right(p2))\n",
     "\n",
     "    return left_identical and right_identical\n",
     "\n",
@@ -625,9 +630,321 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98b6639f",
+   "metadata": {},
+   "source": [
+    "**Exercício 5:**<br>\n",
+    "Dada uma árvore binária, verifique se ela é uma árvore soma ou não. Em uma árvore soma, o valor de cada nó não folha é igual à soma de todos os elementos presentes em suas subárvores esquerda e direita. O valor de um nó folha pode ser qualquer um e o valor de um nó filho vazio é considerado 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "980c0d04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_sum_tree(tree: LinkedBinaryTree):\n",
+    "    if tree.is_empty():\n",
+    "        return True\n",
+    "\n",
+    "    def recursive_check(p: LinkedBinaryTree.Position):\n",
+    "        if tree.is_leaf(p):\n",
+    "            leaf_value = p.element()\n",
+    "            return (True, leaf_value)\n",
+    "        \n",
+    "        left_pos = tree.left(p)\n",
+    "        if left_pos is not None:\n",
+    "            is_valid_left, total_sum_left = recursive_check(left_pos)\n",
+    "        else:\n",
+    "            is_valid_left, total_sum_left = (True, 0)\n",
+    "\n",
+    "        right_pos = tree.right(p)\n",
+    "        if right_pos is not None:\n",
+    "            is_valid_right, total_sum_right = recursive_check(right_pos)\n",
+    "        else:\n",
+    "            is_valid_right, total_sum_right = (True, 0)\n",
+    "\n",
+    "        if not is_valid_right or not is_valid_left:\n",
+    "            return (False, 0)\n",
+    "        \n",
+    "        value = p.element()\n",
+    "        if value == (total_sum_left + total_sum_right):\n",
+    "            new_sum = total_sum_left + total_sum_right + value\n",
+    "            return (True, new_sum)\n",
+    "        else:\n",
+    "            return (False, 0)\n",
+    "        \n",
+    "    result, _ = recursive_check(tree.root())\n",
+    "    return result\n",
+    "\n",
+    "sum_tree = LinkedBinaryTree()\n",
+    "root = sum_tree._add_root(26)\n",
+    "sumtree_root_left = sum_tree._add_left(root, 10)\n",
+    "sumtree_root_right = sum_tree._add_right(root, 3)\n",
+    "\n",
+    "sum_tree._add_left(sumtree_root_left, 4)\n",
+    "sum_tree._add_right(sumtree_root_left, 6)\n",
+    "\n",
+    "sum_tree._add_right(sumtree_root_right, 3)\n",
+    "\n",
+    "#      26\n",
+    "#     /  \\\n",
+    "#   10    3\n",
+    "#  /  \\    \\\n",
+    "# 4    6    3\n",
+    "\n",
+    "print(is_sum_tree(sum_tree))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25307898",
+   "metadata": {},
+   "source": [
+    "**Exercício 6:**<br>\n",
+    "Dada uma árvore binária, escreva um algoritmo eficiente para imprimir todos os caminhos do nó raíz até cada folha."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "980c0d04",
+   "id": "f73d7fa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 2 -> 4\n",
+      "1 -> 2 -> 5\n",
+      "1 -> 3 -> 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_root_to_leaf_paths(tree: LinkedBinaryTree):\n",
+    "    if tree.is_empty():\n",
+    "        return\n",
+    "    \n",
+    "    def dfs_paths(p: LinkedBinaryTree.Position, current_path: list):\n",
+    "        current_path.append(p.element())\n",
+    "        if tree.is_leaf(p):\n",
+    "            print(' -> '.join(map(str, current_path)))\n",
+    "        else:\n",
+    "            left_child = tree.left(p)\n",
+    "            if left_child is not None:\n",
+    "                dfs_paths(left_child, current_path)\n",
+    "            right_child = tree.right(p)\n",
+    "            if right_child is not None:\n",
+    "                dfs_paths(right_child, current_path)\n",
+    "        current_path.pop()\n",
+    "    dfs_paths(tree.root(), [])\n",
+    "\n",
+    "#       26\n",
+    "#      /  \\\n",
+    "#    10    3\n",
+    "#   /  \\    \\\n",
+    "#  4    6    3\n",
+    "\n",
+    "tree = LinkedBinaryTree()\n",
+    "root = tree._add_root(26)\n",
+    "left_node = tree._add_left(root, 10)\n",
+    "right_node = tree._add_right(root, 3)\n",
+    "\n",
+    "tree._add_left(left_node, 4)\n",
+    "tree._add_right(left_node, 6)\n",
+    "tree._add_right(right_node, 3)\n",
+    "\n",
+    "print_root_to_leaf_paths(tree)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98edd9a6",
+   "metadata": {},
+   "source": [
+    "**Exercício 7:**<br>\n",
+    "Dada uma árvore binária, encontre todos os ancestrais de um nó específico dela."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "100aac75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ancestral nodes of 4: [10, 26]\n",
+      "Ancestral nodes of 6: [10, 26]\n",
+      "Ancestral nodes of 3: [26]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_ancestors(tree: LinkedBinaryTree, target_value):\n",
+    "    if tree.is_empty():\n",
+    "        return\n",
+    "    def find_position(p, value):\n",
+    "        if p.element() == value:\n",
+    "            return p\n",
+    "        \n",
+    "        left_child = tree.left(p)\n",
+    "        if left_child is not None:\n",
+    "            res = find_position(left_child, value)\n",
+    "            if res is not None: return res\n",
+    "        \n",
+    "        right_child = tree.right(p)\n",
+    "        if right_child is not None:\n",
+    "            res = find_position(right_child, value)\n",
+    "            if res is not None: return res\n",
+    "        \n",
+    "        return None\n",
+    "    \n",
+    "    target_pos = find_position(tree.root(), target_value)\n",
+    "    if target_pos is None:\n",
+    "        print(\"Value does not exist in tree.\")\n",
+    "        return\n",
+    "    \n",
+    "    ancestors = []\n",
+    "    curr = tree.parent(target_pos)\n",
+    "\n",
+    "    while curr is not None:\n",
+    "        ancestors.append(curr.element())\n",
+    "        curr = tree.parent(curr)\n",
+    "    \n",
+    "    if not ancestors:\n",
+    "        print(\"Target node is root.\")\n",
+    "    else:\n",
+    "        print(f\"Ancestral nodes of {target_value}: {ancestors}\")\n",
+    "\n",
+    "#       26\n",
+    "#      /  \\\n",
+    "#    10    3\n",
+    "#   /  \\    \n",
+    "#  4    6    \n",
+    "\n",
+    "tree = LinkedBinaryTree()\n",
+    "root = tree._add_root(26)\n",
+    "\n",
+    "left_node = tree._add_left(root, 10)\n",
+    "right_node = tree._add_right(root, 3)\n",
+    "\n",
+    "tree._add_left(left_node, 4)\n",
+    "tree._add_right(left_node, 6)\n",
+    "\n",
+    "# expected: 10, 26\n",
+    "print_ancestors(tree, 4)\n",
+    "\n",
+    "# expected: 10, 26\n",
+    "print_ancestors(tree, 6)\n",
+    "\n",
+    "# expected: 26\n",
+    "print_ancestors(tree, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ba779c9",
+   "metadata": {},
+   "source": [
+    "**Exercício 8:**<br>\n",
+    "Dada uma árvore binária, substitua o valor de cada nó pela soma de todos os elementos presentes em suas subárvores esquerda e direita. Você pode assumir que o valor de um nó filho vazio é 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0b7ae7fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ORIGINAL TREE (PREORDER)\n",
+      "26 10 4 6 3 3 \n",
+      "\n",
+      "TRANSFORMED TREE (PREORDER):\n",
+      "26 10 0 0 3 0 "
+     ]
+    }
+   ],
+   "source": [
+    "def to_sum_tree(tree: LinkedBinaryTree):\n",
+    "    if tree.is_empty():\n",
+    "        return\n",
+    "\n",
+    "    def transform_recursive(p):\n",
+    "        sum_left = 0\n",
+    "        left_child = tree.left(p)\n",
+    "        if left_child is not None:\n",
+    "            sum_left = transform_recursive(left_child)\n",
+    "        \n",
+    "        sum_right = 0\n",
+    "        right_child = tree.right(p)\n",
+    "        if right_child is not None:\n",
+    "            sum_right = transform_recursive(right_child)\n",
+    "        \n",
+    "        old_value = p.element()\n",
+    "        \n",
+    "        new_value = sum_left + sum_right\n",
+    "\n",
+    "        tree._replace(p, new_value)\n",
+    "        \n",
+    "        return old_value + new_value\n",
+    "\n",
+    "    transform_recursive(tree.root())\n",
+    "\n",
+    "\n",
+    "#       26                 (Should be: 10 + 3 + 4 + 6 + 0 + 3 = 26)\n",
+    "#      /  \\\n",
+    "#    10    3               (10 turns 4+6=10. 3 turns 0+3=3)\n",
+    "#   /  \\    \\\n",
+    "#  4    6    3             (Leaves turn 0)\n",
+    "\n",
+    "tree = LinkedBinaryTree()\n",
+    "root = tree._add_root(26)\n",
+    "left_node = tree._add_left(root, 10)\n",
+    "right_node = tree._add_right(root, 3)\n",
+    "tree._add_left(left_node, 4)\n",
+    "tree._add_right(left_node, 6)\n",
+    "tree._add_right(right_node, 3)\n",
+    "\n",
+    "print(\"ORIGINAL TREE (PREORDER)\")\n",
+    "for p in tree.preorder():\n",
+    "    print(p.element(), end=\" \")\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "\n",
+    "to_sum_tree(tree)\n",
+    "\n",
+    "print(\"TRANSFORMED TREE (PREORDER):\")\n",
+    "# expected: 26 10 0 0 3 0 \n",
+    "def print_tree(t, p):\n",
+    "    print(p.element(), end=\" \")\n",
+    "    if t.left(p): print_tree(t, t.left(p))\n",
+    "    if t.right(p): print_tree(t, t.right(p))\n",
+    "\n",
+    "print_tree(tree, tree.root())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5b5ff95",
    "metadata": {},
    "outputs": [],
    "source": []
